Define user token (used for api calls) instead of hardcoded value.

--- a/install/templates/piwik_db_dump.sql.j2
+++ b/install/templates/piwik_db_dump.sql.j2
@@ -599,7 +599,7 @@ CREATE TABLE `piwik_user` (
 --
 
 INSERT INTO `piwik_user` (`login`, `password`, `alias`, `email`, `token_auth`, `superuser_access`, `date_registered`) VALUES
-('{{ piwik_admin_user }}', '{{ piwik_admin_password }}', '{{ piwik_admin_user }}', '{{ piwik_admin_email }}', 'c449fb552e7d39fe6ae22d8a02f30e1a', 1, '2017-05-28 10:13:19');
+('{{ piwik_admin_user }}', '{{ piwik_admin_password }}', '{{ piwik_admin_user }}', '{{ piwik_admin_email }}', '{{ piwik_admin_token }}', 1, '2017-05-28 10:13:19');
 
 -- --------------------------------------------------------
 
